Modifica classi factory e miglioramento